# backend/admin/docs/swagger.yaml
@@ -397,6 +397,15 @@ definitions:
       total:
         type: integer
     type: object
+  gormc.PagingResult-internal_router_logic_RespSysUser:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/internal_router_logic.RespSysUser'
+        type: array
+      total:
+        type: integer
+    type: object
   internal_router_logic.ReqAccountChangePwd:
     properties:
       newPwd:
@@ -871,6 +880,62 @@ definitions:
     required:
       - id
     type: object
+  internal_router_logic.ReqSysUserBatchDelete:
+    properties:
+      ids:
+        items:
+          type: integer
+        minItems: 1
+        type: array
+    required:
+      - ids
+    type: object
+  internal_router_logic.ReqSysUserCreate:
+    properties:
+      isEnabled:
+        type: boolean
+      languageCode:
+        maxLength: 32
+        type: string
+      nickname:
+        maxLength: 64
+        type: string
+      password:
+        maxLength: 255
+        minLength: 6
+        type: string
+      remark:
+        maxLength: 255
+        type: string
+      username:
+        maxLength: 64
+        type: string
+    required:
+      - nickname
+      - password
+      - username
+    type: object
+  internal_router_logic.ReqSysUserUpdate:
+    properties:
+      id:
+        type: integer
+      isEnabled:
+        type: boolean
+      languageCode:
+        maxLength: 32
+        type: string
+      nickname:
+        maxLength: 64
+        type: string
+      remark:
+        maxLength: 255
+        type: string
+      username:
+        maxLength: 64
+        type: string
+    required:
+      - id
+    type: object
   internal_router_logic.ResAccountPwdLogin:
     properties:
       publicKey:
@@ -959,8 +1024,6 @@ definitions:
         type: string
       name:
         type: string
-      order:
-        type: integer
       parentID:
         type: integer
       path:
@@ -1054,6 +1117,45 @@ definitions:
         type: string
       updatedBy:
         type: integer
+    type: object
+  internal_router_logic.RespSysUser:
+    properties:
+      canDelete:
+        type: boolean
+      canWrite:
+        type: boolean
+      createdAt:
+        type: string
+      createdBy:
+        type: integer
+      deletedAt:
+        type: integer
+      deletedBy:
+        type: integer
+      id:
+        type: integer
+      isEnabled:
+        type: boolean
+      languageCode:
+        type: string
+      lastLoginAt:
+        type: string
+      lastLoginIP:
+        type: string
+      nickname:
+        type: string
+      remark:
+        type: string
+      sysRoles:
+        items:
+          $ref: '#/definitions/admin_internal_services_orm_models.SysRole'
+        type: array
+      updatedAt:
+        type: string
+      updatedBy:
+        type: integer
+      username:
+        type: string
     type: object
   v1.PagingRequest:
     properties:
@@ -1897,4 +1999,93 @@ paths:
       summary: 更新菜单资源
       tags:
         - ResourceMenu
+  /api/sys/user/create:
+    post:
+      consumes:
+        - application/json
+      parameters:
+        - description: 用户创建参数
+          in: body
+          name: req
+          required: true
+          schema:
+            $ref: '#/definitions/internal_router_logic.ReqSysUserCreate'
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/admin_internal_fiberc_res.Response'
+      summary: 创建用户
+      tags:
+        - User
+  /api/sys/user/del:
+    post:
+      consumes:
+        - application/json
+      parameters:
+        - description: 批量删除参数
+          in: body
+          name: req
+          required: true
+          schema:
+            $ref: '#/definitions/internal_router_logic.ReqSysUserBatchDelete'
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/admin_internal_fiberc_res.Response'
+      summary: 删除用户
+      tags:
+        - User
+  /api/sys/user/list:
+    post:
+      consumes:
+        - application/json
+      parameters:
+        - description: 分页参数
+          in: body
+          name: req
+          required: true
+          schema:
+            $ref: '#/definitions/v1.PagingRequest'
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            allOf:
+              - $ref: '#/definitions/admin_internal_fiberc_res.Response'
+              - properties:
+                  data:
+                    $ref: '#/definitions/gormc.PagingResult-internal_router_logic_RespSysUser'
+                type: object
+      summary: 获取用户分页列表
+      tags:
+        - User
+  /api/sys/user/update:
+    post:
+      consumes:
+        - application/json
+      parameters:
+        - description: 用户更新参数
+          in: body
+          name: req
+          required: true
+          schema:
+            $ref: '#/definitions/internal_router_logic.ReqSysUserUpdate'
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/admin_internal_fiberc_res.Response'
+      summary: 更新用户
+      tags:
+        - User
 swagger: "2.0"
